# SafetyCriticalGraphicsVerifier

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cl.yml
include/: safety_display.h
src/: main.c  safety_display.c
tests/: test_display.c
